--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,10 @@
 *.user
 *.userosscache
 *.sln.docstates
+GDB/dataset/
+GDB/antlr4-runtime/
+GDB/antlr Debug DLL/
+GDB/antlr Release DLL/
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
